# serializer version: 1
# name: TestPreviewList.test_early_access_features
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.1
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'feature_flag'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.2
  '''
  SELECT "posthog_integration"."id",
         "posthog_integration"."team_id",
         "posthog_integration"."kind",
         "posthog_integration"."integration_id",
         "posthog_integration"."config",
         "posthog_integration"."sensitive_config",
         "posthog_integration"."errors",
         "posthog_integration"."created_at",
         "posthog_integration"."created_by_id"
  FROM "posthog_integration"
  WHERE ("posthog_integration"."kind" = 'vercel'
         AND "posthog_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.3
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'feature_flag'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.4
  '''
  SELECT "posthog_integration"."id",
         "posthog_integration"."team_id",
         "posthog_integration"."kind",
         "posthog_integration"."integration_id",
         "posthog_integration"."config",
         "posthog_integration"."sensitive_config",
         "posthog_integration"."errors",
         "posthog_integration"."created_at",
         "posthog_integration"."created_by_id"
  FROM "posthog_integration"
  WHERE ("posthog_integration"."kind" = 'vercel'
         AND "posthog_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.5
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'early_access_feature'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.6
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'early_access_feature'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features.7
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.8
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features.9
  '''
  SELECT "posthog_earlyaccessfeature"."id",
         "posthog_earlyaccessfeature"."team_id",
         "posthog_earlyaccessfeature"."feature_flag_id",
         "posthog_earlyaccessfeature"."name",
         "posthog_earlyaccessfeature"."description",
         "posthog_earlyaccessfeature"."stage",
         "posthog_earlyaccessfeature"."documentation_url",
         "posthog_earlyaccessfeature"."created_at",
         "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."updated_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime",
         "posthog_featureflag"."last_called_at"
  FROM "posthog_earlyaccessfeature"
  INNER JOIN "posthog_team" ON ("posthog_earlyaccessfeature"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_featureflag" ON ("posthog_earlyaccessfeature"."feature_flag_id" = "posthog_featureflag"."id")
  WHERE ("posthog_earlyaccessfeature"."stage" IN ('beta')
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.1
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.2
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'feature_flag'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.3
  '''
  SELECT "posthog_integration"."id",
         "posthog_integration"."team_id",
         "posthog_integration"."kind",
         "posthog_integration"."integration_id",
         "posthog_integration"."config",
         "posthog_integration"."sensitive_config",
         "posthog_integration"."errors",
         "posthog_integration"."created_at",
         "posthog_integration"."created_by_id"
  FROM "posthog_integration"
  WHERE ("posthog_integration"."kind" = 'vercel'
         AND "posthog_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.4
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'early_access_feature'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.5
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_cached_team.6
  '''
  SELECT "posthog_earlyaccessfeature"."id",
         "posthog_earlyaccessfeature"."team_id",
         "posthog_earlyaccessfeature"."feature_flag_id",
         "posthog_earlyaccessfeature"."name",
         "posthog_earlyaccessfeature"."description",
         "posthog_earlyaccessfeature"."stage",
         "posthog_earlyaccessfeature"."documentation_url",
         "posthog_earlyaccessfeature"."created_at",
         "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."updated_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime",
         "posthog_featureflag"."last_called_at"
  FROM "posthog_earlyaccessfeature"
  INNER JOIN "posthog_team" ON ("posthog_earlyaccessfeature"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_featureflag" ON ("posthog_earlyaccessfeature"."feature_flag_id" = "posthog_featureflag"."id")
  WHERE ("posthog_earlyaccessfeature"."stage" IN ('beta')
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."receive_org_level_activity_logs",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.1
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'feature_flag'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.2
  '''
  SELECT "posthog_integration"."id",
         "posthog_integration"."team_id",
         "posthog_integration"."kind",
         "posthog_integration"."integration_id",
         "posthog_integration"."config",
         "posthog_integration"."sensitive_config",
         "posthog_integration"."errors",
         "posthog_integration"."created_at",
         "posthog_integration"."created_by_id"
  FROM "posthog_integration"
  WHERE ("posthog_integration"."kind" = 'vercel'
         AND "posthog_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.3
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'early_access_feature'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.4
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestPreviewList.test_early_access_features_with_pre_env_cached_team.5
  '''
  SELECT "posthog_earlyaccessfeature"."id",
         "posthog_earlyaccessfeature"."team_id",
         "posthog_earlyaccessfeature"."feature_flag_id",
         "posthog_earlyaccessfeature"."name",
         "posthog_earlyaccessfeature"."description",
         "posthog_earlyaccessfeature"."stage",
         "posthog_earlyaccessfeature"."documentation_url",
         "posthog_earlyaccessfeature"."created_at",
         "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."updated_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime",
         "posthog_featureflag"."last_called_at"
  FROM "posthog_earlyaccessfeature"
  INNER JOIN "posthog_team" ON ("posthog_earlyaccessfeature"."team_id" = "posthog_team"."id")
  LEFT OUTER JOIN "posthog_featureflag" ON ("posthog_earlyaccessfeature"."feature_flag_id" = "posthog_featureflag"."id")
  WHERE ("posthog_earlyaccessfeature"."stage" IN ('beta')
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
